--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ body {
 
   .mobile-menu-social-icon {
     display: flex;
-    gap: 56px;
+    justify-content: space-between;
   }
 
   .mobile-social-icon-item {
@@ -1315,6 +1315,27 @@ body {
   padding-right: 24px;
   padding-bottom: 24px;
   padding-top: 72px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 427px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    min-height: 576px;
+    padding: 112px 24px;
+    background-color: var(--modal-bgc);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 24px;
+    padding-top: 72px;
+  }
 }
 
 .modal-close-btn {
