--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,11 @@ body {
   .page-header {
     padding-top: 24px;
     padding-bottom: 24px;
+    background-color: var(--primary-bg-color);
+
+    border-bottom: 1px solid var(--border-color);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   }
 
   .logo {
@@ -153,7 +158,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     position: relative;
-    padding-left: 40px;
+    height: 100%;
     padding-top: 80px;
   }
 
@@ -167,7 +172,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 0;
-    border: 1px solid var(--primary-text-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     background-color: var(--border-color);
     cursor: pointer;
@@ -261,6 +266,11 @@ body {
   .page-header {
     padding-top: 16px;
     padding-bottom: 13px;
+    background-color: var(--primary-bg-color);
+
+    border-bottom: 1px solid var(--border-color);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   }
 
   .contacts-adress {
@@ -282,6 +292,7 @@ body {
 
   .menu-list {
     display: flex;
+    align-items: center;
     gap: 40px;
   }
 }
@@ -354,7 +365,7 @@ body {
     position: absolute;
     left: 0;
     width: 100%;
-    bottom: -4px;
+    bottom: -5px;
     height: 4px;
     content: "";
     border-radius: 2px;
@@ -411,6 +422,11 @@ body {
   .page-header {
     padding-top: 26px;
     padding-bottom: 26px;
+    background-color: var(--primary-bg-color);
+
+    border-bottom: 1px solid var(--border-color);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   }
 
   .contacts-adress {
@@ -427,6 +443,22 @@ body {
     color: var(--title-text-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+}
+
+.hero-title {
+  font-family: var(--main-font-family);
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  max-width: 496px;
+  margin-top: 0;
+  margin-bottom: 36px;
+  margin-left: auto;
+  margin-right: auto;
+  color: var(--primary-bg-color);
 }
 
 /* Hero mobile */
@@ -458,22 +490,21 @@ body {
       ),
       url("../images/job-mobile/office-mobile@2x.jpg");
   }
-}
-
-.hero-title-mobile {
-  font-family: var(--main-font-family);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  text-align: center;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  max-width: 320px;
-  margin-top: 0;
-  margin-bottom: 72px;
-  margin-left: auto;
-  margin-right: auto;
-  color: var(--primary-bg-color);
+  .hero-title-mobile {
+    font-family: var(--main-font-family);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    max-width: 320px;
+    margin-top: 0;
+    margin-bottom: 72px;
+    margin-left: auto;
+    margin-right: auto;
+    color: var(--primary-bg-color);
+  }
 }
 
 /* Hero tablet */
@@ -502,12 +533,21 @@ body {
       ),
       url("../images/job-tablet/office-tablet@2x.jpg");
   }
-}
 
-@media screen and (min-width: 428px) {
-  .hero-title {
-    max-width: 496px;
-    font-size: 56px;
+  .hero-title-mobile {
+    font-family: var(--main-font-family);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    max-width: 320px;
+    margin-top: 0;
+    margin-bottom: 72px;
+    margin-left: auto;
+    margin-right: auto;
+    color: var(--primary-bg-color);
   }
 }
 
@@ -521,7 +561,6 @@ body {
       url("../images/job/office.jpg");
     padding: 188px 0;
     max-width: 1440px;
-    height: 600px;
     background-size: cover;
     margin-left: auto;
     margin-right: auto;
@@ -537,6 +576,22 @@ body {
         rgba(46, 47, 66, 0.7)
       ),
       url("../images/job/office-desktop@2x.jpg");
+  }
+
+  .hero-title {
+    font-family: var(--main-font-family);
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    max-width: 496px;
+    margin-top: 0;
+    margin-bottom: 36px;
+    margin-left: auto;
+    margin-right: auto;
+    color: var(--primary-bg-color);
   }
 }
 
@@ -589,14 +644,14 @@ body {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--primary-text-color);
+    margin-bottom: 8px;
   }
 
   .text {
     font-weight: 500;
-    margin-top: 8px;
   }
 
-  .section-about-item:not(:last-child) .text {
+  .section-about-item:not(:last-child) {
     margin-bottom: 72px;
   }
 }
@@ -1162,6 +1217,24 @@ body {
   color: var(--btn-hover-color);
   background-color: var(--btn-hover-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.page-header-portfolio {
+  background-color: var(--primary-bg-color);
+  border-bottom: 1px solid var(--border-color);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-list-item {
+  flex-basis: calc((100% - 192px) / 9);
+}
+
+.page-header-portfolio {
+  background-color: var(--primary-bg-color);
+  border-bottom: 1px solid var(--border-color);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-title {
