--- a/css/style.css
+++ b/css/style.css
@@ -1219,11 +1219,68 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (max-width: 767px) {
+  .page-header-portfolio {
+    background-color: var(--primary-bg-color);
+
+    border-bottom: 1px solid var(--border-color);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  }
+  .btn-scnd {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    margin-bottom: 72px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .page-header-portfolio .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .btn-scnd {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 72px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .container-portfolio-tablet {
+    max-width: 100%;
+  }
+
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 .page-header-portfolio {
+  padding-top: 16px;
+  padding-bottom: 13px;
   background-color: var(--primary-bg-color);
   border-bottom: 1px solid var(--border-color);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.site-nav-list-portfolio::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  bottom: -14px;
+  left: 0;
+  border-radius: 2px;
+  color: var(--btn-hover-color);
+  background-color: var(--btn-hover-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item {
@@ -1287,14 +1344,6 @@ body {
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn-scnd {
-  display: flex;
-  gap: 24px;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 72px;
 }
 
 .button-secondary {
