--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ body {
     visibility: hidden;
     pointer-events: none;
     transition: 500ms linear, visibility 500ms linear;
+    z-index: 1;
   }
 
   .mobile-menu.is-open {
