--- a/css/style.css
+++ b/css/style.css
@@ -1234,6 +1234,10 @@ body {
     gap: 24px;
     margin-bottom: 72px;
   }
+
+  .portfolio-list-item {
+    width: 100%;
+  }
 }
 @media screen and (min-width: 768px) {
   .page-header-portfolio .container {
@@ -1282,10 +1286,6 @@ body {
   color: var(--btn-hover-color);
   background-color: var(--btn-hover-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-list-item {
-  flex-basis: calc((100% - 192px) / 9);
 }
 
 .page-header-portfolio {
